tests/error/07_type_not_callable.mire
load kioto

pub fn main: () {
    set x = not_a_function
}